tests/bad/circular_import_b.mon
import * as a from "./circular_import_a.mon"

{
}
